k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helo-svc
  name: helo-svc
spec:
  ports:
  - name: "8181"
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: helok8s
  type: ClusterIP
